# web3-agent-tools

./: .gitignore  README.md
go-tools/: Dockerfile  README.md  docker_cross_build_amd64.sh  go.mod  local_build.sh
go-tools/binance-spot/: binance_spot.c  binance_spot.h  constants.go  go.mod  go.sum  main.go
go-tools/binance_spot/: binance_spot.c  binance_spot.h  constants.go  go.mod  go.sum  main.go  types.go
go-tools/blockbeats/: main.go  types.go
go-tools/coinmarketcap/: go.mod  main.go
go-tools/defillama/: main.go  types.go  utils.go
go-tools/dependencies/: tools.go  tools.h
go-tools/flash_news/: blockbeats.go  blockbeats_test.go  go.mod  main.go  news.c  news.h  panews.go  panews_test.go  schema.json  types.go
go-tools/hashkey_global/: account.go  account_test.go  config.go  go.mod  go.sum  go_types.go  go_types_test.go  (+11 more)
py-helper/: blockbeats.py  main.py  pyproject.toml
py-helper/binance_spot/: cancel_order.py  create_order.py  kline.py  main.py  open_orders.py  price_change_24h.py  price_change_rolling.py  schema.json  types.py  withdraw_history.py
py-helper/coinmarketcap/conversion_tools/: main.py
py-helper/coinmarketcap/cryptocurrency/: main.py
py-helper/coinmarketcap/exchange/: main.py
py-helper/coinmarketcap/fiat/: main.py
py-helper/coinmarketcap/global_metrics/: main.py
py-helper/coinmarketcap/key/: main.py
py-helper/hashkey_global/: main.py  schema.json  tool_types.py
py-helper/libs/: converter.py  schema.py  test_converter.py  tool.py
py-helper/marsbit/: main.py
py-helper/odaily/: main.py
py-helper/twitter/: main.py
(+79 files in other folders)
